# GLM-TTS

./: pyproject.toml
cosyvoice/cli/: frontend.py
utils/: hift_util.py  tts_model_util.py
